Fix CSS formatting and update text color for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
-.body{
+.body {
     background-image: url('/images/campus.jpeg');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+
 }
 
 .first{
     left: 50%;
-    color :white;
+    color :rgb(0, 0, 0);
 }
